<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>

    <string name="question_kenya">Nairobi is the capital of Kenya</string>
    <string name="question_ocean">The pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez canal connects the Red sea and the Indian ocean</string>
    <string name="question_africa">The source of the Nile river is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
</resources>